# guardian-angel

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: approval_example.py  async_approval_example.py  basic_usage.py  complete_pipeline_example.py  json_policy_example.py  policy.json  policy.yaml  request.json  wrapped_tool_example.py  yaml_policy_example.py
src/agentguard/: guard.py  yaml_loader.py
src/guardian_angel/: __init__.py  decision.py  evaluator.py  guard.py  predicates.py  request.py  rule.py  tool_decorator.py  yaml_loader.py
src/guardian_angel/cli/: __init__.py  app.py  deps.py  evaluate.py  output.py
src/guardian_angel/core/: __init__.py  approval.py  config.py  decision.py  evaluator.py  exceptions.py  guard.py  policy_engine.py  policy_loader.py  predicates.py  request.py  rule.py  tool_decorator.py  yaml_loader.py
tests/: test_approval.py  test_async_approval.py  test_json_loader.py  test_policy_engine.py  test_tool_decorator.py  test_yaml_loader.py
